--- a/src/Weather.css
+++ b/src/Weather.css
@@ -34,6 +34,8 @@
 
 .Weather img {
   height: 64px;
+  width: 64px;
+  margin-right: 10px;
   float: left;
   display: inline-block;
 }
@@ -43,4 +45,15 @@
   color: rgb(33, 33, 33);
   font-size: 64px;
   font-weight: 400;
+  line-height: 64px;
+}
+
+.Weather .unit {
+  color: rgb(33, 33, 33);
+  font-size: 16px;
+  font-weight: 400;
+  position: relative;
+  line-height: 1;
+  top: -34px;
+  margin-left: 5px;
 }
