--- a/src/Weather.css
+++ b/src/Weather.css
@@ -33,11 +33,7 @@
 }
 
 .Weather canvas {
-  height: 64px;
-  width: 64px;
-  margin-right: 3px;
-  float: left;
-  display: inline-block;
+  margin-right: 10px auto;
 }
 
 .Weather .temperature {
